# CalSync

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  notes.md  pyproject.toml
src/calsync/: __init__.py  __main__.py  cli.py  config.py
src/calsync/adapters/: __init__.py  base.py  eventkit.py
src/calsync/models/: __init__.py  event.py  placeholder.py
src/calsync/sync/: __init__.py  differ.py  engine.py  tracker.py
